Declare a controller on the patient detail so that we can force the episode to the dental care episode and do the filtering let us know if the patient has an open fp17s or fp17os

--- a/odonto/templates/patient_detail.html
+++ b/odonto/templates/patient_detail.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   {% for episode_category in episode_categories %}
   {% if episode_category.detail_template %}
-  <div class="row" ng-show="view == null && episode.category_name == '{{ episode_category.display_name }}'">
+  <div class="row" ng-controller="DentalCareCtrl" ng-show="view == null && episode.category_name == '{{ episode_category.display_name }}'">
     {% include episode_category.detail_template %}
   </div>
   {% endif %}
