--- a/odonto/templates/unsubmitted_list.html
+++ b/odonto/templates/unsubmitted_list.html
@@ -7,7 +7,7 @@
       {% for episode in view.get_fp17s %}
         <tr>
           <td>
-            <a href="{% url 'odonto-patient-detail' episode.patient.pk %}">
+            <a href="/#/patient/{{ episode.patient.pk }}/">
               {{ episode.patient.demographics.name }}
             </a>
           </td>
