--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -89,5 +89,22 @@
   </div>
 </div>
 
+<div class="row content-offset-20">
+  <div class="col-md-6">
+    {% record_panel models.Treatment %}
+  </div>
+  <div class="col-md-6">
+    {% record_panel models.Allergies %}
+  </div>
+</div>
+<div class="row content-offset-20">
+  <div class="col-md-6">
+    {% record_panel models.PastMedicalHistory %}
+  </div>
+  <div class="col-md-6">
+    {% record_panel models.PatientConsultation %}
+  </div>
+</div>
+
 
 
