The controller was implying it was returning the pk of the newFP17[O] episode when it was returning the episode itself... Make this explicitly return the new episode and make sure the template knows this

--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -27,11 +27,11 @@
 
 <div class="row content-offset">
   <a ng-class="{disabled: dentalCare.hasOpenFp17}" class="btn btn-primary btn-lg pull-right open-claim-button"
-    href="{% link_url pathways.Fp17Pathway ngpatient='patient.id' ngepisode='dentalCare.newFp17Pk' %}">
+    href="{% link_url pathways.Fp17Pathway ngpatient='patient.id' ngepisode='dentalCare.newFp17.id' %}">
     Open FP17
   </a>
   <a ng-class="{disabled: dentalCare.hasOpenFp17o}" class="btn btn-primary btn-lg pull-right open-claim-button"
-    href="{% link_url pathways.Fp17Pathway ngpatient='patient.id' ngepisode='dentalCare.newFp17oPk' %}">
+    href="{% link_url pathways.Fp17Pathway ngpatient='patient.id' ngepisode='dentalCare.newFp17o.id' %}">
     Open FP17O
   </a>
 </div>
