Correct the past medical history form to show a char field for the year

--- a/odonto/templates/forms/past_medical_history_form.html
+++ b/odonto/templates/forms/past_medical_history_form.html
@@ -4,7 +4,7 @@
     {% charfield field="PastMedicalHistory.condition" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% btn_checkbox field="PastMedicalHistory.year" %}
+    {% charfield field="PastMedicalHistory.year" %}
   </div>
 </div>
 <div class="row">
