--- a/odonto/templates/forms/allergies_form.html
+++ b/odonto/templates/forms/allergies_form.html
@@ -1,7 +1,7 @@
 {% load odonto_forms %}
 <div class="row">
   <div class="col-md-5">
-    {% charfield field="Allergies.drug" %}
+    {% charfield field="Allergies.drug" label="Allergen" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
     {% btn_checkbox field="Allergies.provisional" %}
