--- a/odonto/templates/pathway/templates/pathway_base.html
+++ b/odonto/templates/pathway/templates/pathway_base.html
@@ -7,7 +7,7 @@
         <h1>
           {{ pathway.display_name }}
           <span ng-show="episode">
-            (<a href="/patient/[[ episode.demographics[0].patient_id ]]/#">[[ episode.demographics[0].first_name ]] [[ episode.demographics[0].surname ]]</a>)
+            (<a href="/#/patient/[[ episode.demographics[0].patient_id ]]">[[ episode.demographics[0].first_name ]] [[ episode.demographics[0].surname ]]</a>)
           </span>
         </h1>
       </div>
