Fix the link in the summary page to point to the angular patient detail

--- a/odonto/templates/partials/patient_title.html
+++ b/odonto/templates/partials/patient_title.html
@@ -1,4 +1,4 @@
-<a href="/patient/[[ episode.demographics[0].patient_id ]]/#/">
+<a href="/#/patient/[[ episode.demographics[0].patient_id ]]">
   [[ episode.demographics[0].first_name ]] [[ episode.demographics[0].surname ]]
   <span ng-show="episode.demographics[0].date_of_birth">
   ([[ episode.demographics[0].date_of_birth | displayDate ]])
