Make sure that we use sentence case rather than title case as that is the standard for this application

--- a/odonto/templates/forms/treatment_form.html
+++ b/odonto/templates/forms/treatment_form.html
@@ -18,10 +18,10 @@
 </div>
 <div class="row">
   <div class="col-md-5">
-    {% odonto_datepicker field="Treatment.start_date" %}
+    {% odonto_datepicker field="Treatment.start_date" label="Start date" %}
   </div>
   <div class="col-md-5 col-md-offset-1">
-    {% odonto_datepicker field="Treatment.end_date" %}
+    {% odonto_datepicker field="Treatment.end_date" label="End date" %}
   </div>
 </div>
 
