--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -7,10 +7,10 @@
   <div class="row">
     <div class="col-md-4">
       <p>
-        NHS Number: <b>[[ demographics.nhs_number ]]</b>
+        NHS number: <b>[[ demographics.nhs_number ]]</b>
       </p>
       <p>
-        Mobile Number: <b>[[ demographics.phone_number ]]</b>
+        Mobile number: <b>[[ demographics.phone_number ]]</b>
       </p>
     </div>
     <div class="col-md-3">
