--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -564,3 +564,11 @@ table.patient-list {
 .errored-state select{
     background-color: #fcc;
 }
+
+.record-panel h3{
+    font-size: 30px;
+
+    i{
+        margin-top: 5px;
+    }
+}
