Change the font to the normal size and add a line break in the register patient form

--- a/plugins/add_patient_step/templates/add_patient/pathway/partials/unable_to_find_patient.html
+++ b/plugins/add_patient_step/templates/add_patient/pathway/partials/unable_to_find_patient.html
@@ -2,8 +2,11 @@
 {% load odonto_forms %}
 <div class="col-md-12">
     <div class="row content-offset-10 content-offset-below-25">
-      <p class="lead">
-          Unable to find a patient with the NHS number <b>[[ editing.demographics.nhs_number ]]</b>. Register them now:
+      <p>
+      Unable to find a patient with the NHS number <b>[[ editing.demographics.nhs_number ]]</b>.
+      </p>
+      <p>
+      Register them now:
       </p>
     </div>
     <form class="form-horizontal">
