Make sure the contact details in the demographics form is lower case

--- a/odonto/templates/forms/demographics_form.html
+++ b/odonto/templates/forms/demographics_form.html
@@ -34,7 +34,7 @@
   </div>
 </div>
 <div class="row">
-  <h2>Contact Details</h2>
+  <h2>Contact details</h2>
 </div>
 <div class="row">
   <div class="col-md-5 with-decline">
