--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -572,3 +572,10 @@ table.patient-list {
         margin-top: 5px;
     }
 }
+
+.patient-consultation-long-form{
+    line-height: 26px;
+    letter-spacing: 0.04em;
+    word-spacing: 0.1em;
+    text-align: justify;
+}
