--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -578,4 +578,11 @@ table.patient-list {
 .record-panel h3 i {
   margin-top: 5px;
 }
+
+.patient-consultation-long-form {
+  line-height: 26px;
+  letter-spacing: 0.04em;
+  word-spacing: 0.1em;
+  text-align: justify;
+}
 /*# sourceMappingURL=odonto.css.map */
