--- a/odontotheme/templates/navbar.html
+++ b/odontotheme/templates/navbar.html
@@ -8,7 +8,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <a class="navbar-brand" href="/#/">
-        <img src="{% static 'img/odonto_logo.png' %}" />
+        <img src="{% static 'img/odonto_in_app_logo.png' %}" />
         {{ OPAL_BRAND_NAME }}
       </a>
 
