--- a/odonto/templates/detail/dental_care.html
+++ b/odonto/templates/detail/dental_care.html
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-1 col-md-offset-4">
       <a ng-click="episode.recordEditor.editItem('demographics', 0)">
-        <i class="fa fa-pencil edit pull-right"></i>
+        <i class="fa fa-pencil edit pull-right pointer"></i>
       </a>
     </div>
   </div>
