--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -212,6 +212,12 @@ label{
   }
 }
 
+h5{
+   font-size: inherit;
+   font-weight: bold;
+   margin-bottom: 8px;
+}
+
 #episode-history a{
     padding: 5px;
 }
