layout the other dental services form in the same layout as the exemptions and remissions form

--- a/odonto/templates/forms/fp17_other_dental_services_form.html
+++ b/odonto/templates/forms/fp17_other_dental_services_form.html
@@ -1,22 +1,22 @@
 {% load odonto_forms %}
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-3">
     {% btn_checkbox field="Fp17OtherDentalServices.treatment_on_referral" style="vertical" %}
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3 col-md-offset-1">
     {% btn_checkbox field="Fp17OtherDentalServices.further_treatment_within_2_months" style="vertical" %}
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3 col-md-offset-1">
     {% btn_checkbox field="Fp17OtherDentalServices.sedation_services" style="vertical" %}
   </div>
 </div>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-3">
     {% btn_checkbox field="Fp17OtherDentalServices.free_repair_or_replacement" style="vertical" %}
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3 col-md-offset-1">
     {% btn_checkbox field="Fp17OtherDentalServices.domicillary_services" style="vertical" %}
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3 col-md-offset-1">
   </div>
 </div>
