--- a/odontotheme/templates/navbar.html
+++ b/odontotheme/templates/navbar.html
@@ -9,7 +9,9 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/#/">
         <img src="{% static 'img/odonto_in_app_logo.png' %}" />
-        {{ OPAL_BRAND_NAME }}
+        <small>
+          {{ OPAL_BRAND_NAME }}
+        </small>
       </a>
 
     </div>
