--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -248,18 +248,6 @@ h5 {
   color: #DDD;
 }
 
-.navbar .container-fluid .navbar-brand {
-  margin-left: -32px;
-}
-
-.navbar-default a.navbar-brand {
-  color: white;
-}
-
-.navbar-default a.navbar-brand:hover {
-  color: #eee;
-}
-
 .main-view {
   overflow-x: auto;
 }
@@ -285,11 +273,6 @@ h5 {
 
 .navbar-default .navbar-nav > li > a {
   color: white;
-}
-
-.navbar-brand img {
-  height: 80px;
-  margin-top: -15px;
 }
 
 #main-navbar {
@@ -415,8 +398,21 @@ h5 {
   border-bottom: 3px solid #487cbc;
 }
 
-.navbar-brand {
-  padding-left: 50px;
+.navbar-default .container-fluid a.navbar-brand {
+  color: white;
+  margin-left: 15px;
+}
+
+.navbar-default .container-fluid a.navbar-brand:hover {
+  color: white;
+}
+
+.navbar-default .container-fluid a.navbar-brand img {
+  height: 80px;
+  margin-top: -12px;
+  display: block;
+  margin-bottom: 6px;
+  padding-left: 15px;
 }
 
 #side-nav {
