--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -244,6 +244,10 @@ h5{
     position: fixed;
     color: white;
 
+    a{
+        color: white;
+    }
+
     // modal z index 1050, nav bar is 1030
     z-index: 1040;
     top: 0;
