Now that the pathway name is in the header, we need to tweak the top margin on the register patient pathway

--- a/plugins/add_patient_step/templates/add_patient/pathway/partials/search_patient.html
+++ b/plugins/add_patient_step/templates/add_patient/pathway/partials/search_patient.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row content-offset-25">
   <div class="col-sm-8">
     <h4>NHS Number</h4>
     <input required autofocus class="form-control" type="text" ng-model="editing.demographics.nhs_number" ng-keypress="$event.keyCode == 13 && lookup_nhs_number()" />
