--- a/plugins/add_patient_step/templates/add_patient/pathway/partials/unable_to_find_patient.html
+++ b/plugins/add_patient_step/templates/add_patient/pathway/partials/unable_to_find_patient.html
@@ -1,6 +1,6 @@
 {% load forms %}
 {% load odonto_forms %}
-<div class="col-md-12">
+<div class="col-md-12 content-offset-25">
     <div class="row content-offset-10 content-offset-below-25">
       <p>
       Unable to find a patient with the NHS number <b>[[ editing.demographics.nhs_number ]]</b>.
