Finer tweaks to make the forms look more in the Odonto style

--- a/odontotheme/templates/registration/login.html
+++ b/odontotheme/templates/registration/login.html
@@ -49,6 +49,11 @@
           </button>
         </div>
       </div>
+      <div class="form-group">
+        <div class="col-sm-12 text-center">
+          <a href="{% url 'password_reset' %}">Reset password</a>
+        </div>
+      </div>
       <input type="hidden" name="next" value="{{ next }}" />
     </form>
   </div>
