--- a/odonto/templates/registration/password_reset_form.html
+++ b/odonto/templates/registration/password_reset_form.html
@@ -22,8 +22,8 @@
                   {% endif %}
                 </div>
               </div>
-              <div class="form-group">
-                <label for="id_email">{{ form.email.label_tag }}</label>
+              <div class="form-group form-horizontal">
+                <label class="control-label" for="id_email">Email</label>
                 <div class="row">
                   <div class="col-sm-10">
                   {{ form.email }}
