--- a/odonto/templates/registration/password_reset_form.html
+++ b/odonto/templates/registration/password_reset_form.html
@@ -3,16 +3,27 @@
 <div class="content-offset container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h2>Reset Password</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Reset Password</h2>
+        </div>
+      </div>
     </div>
     <div class="panel-body">
-      <p class="lead text-center content-offset-10">
+      <p class="lead text-center content-offset-25">
         <form method="POST" class="center-block" >
           {% csrf_token %}
           <div class="row">
             <div class="col-sm-8 col-md-offset-2">
-              <div class="row">
-                <div class="col-md-12">
+              <div class="form-group">
+                <div class="col-sm-10 col-sm-push-1">
+                  <p class="lead">
+                    Please enter the email address associated with your account.
+                    <br />
+                    We'll send you an email with a link to reset your password.
+                  <p>
+                </div>
+                <div class="col-sm-10 col-sm-push-1 content-offset-25">
                   {% if form.email.errors %}
                   <div class="alert alert-danger" role="alert">
                     {% for error in form.email.errors %}
@@ -22,19 +33,18 @@
                   {% endif %}
                 </div>
               </div>
-              <div class="form-group form-horizontal">
-                <label class="control-label" for="id_email">Email</label>
-                <div class="row">
-                  <div class="col-sm-10">
+
+              <div class="form-group">
+                <div class="col-sm-10 col-sm-push-1"">
                   {{ form.email }}
-                  </div>
                 </div>
               </div>
-              <div class="form-group content-offset">
-                <div class="col-sm-9 col-sm-offset-3">
-                  <button class="btn btn-lg btn-secondary">
+              <div class="row"></div>
+              <div class="form-group content-offset-25">
+                <div class="col-sm-10 col-sm-push-1">
+                  <button class="btn btn-lg btn-secondary pull-right">
                     <i class="fa fa-envelope"></i>
-                    Send email
+                    Continue
                   </button>
                 </div>
               </div>
