Pick up and use the warning flag in the email

--- a/odonto/templates/emails/response_summary.html
+++ b/odonto/templates/emails/response_summary.html
@@ -6,8 +6,8 @@
   <table table width="280" cellpadding="0" cellspacing="0" border="0">
     {% for field, value in section.items %}
     <tr>
-      <td align="left">{{ field }}</td>
-      <td align="right">{{ value }}</td>
+      <td {% if value.warning %}style="color: red"{% endif %} align="left">{{ field }}</td>
+      <td {% if value.warning %}style="color: red"{% endif %} align="right">{{ value }}</td>
     </tr>
     {% endfor %}
   </table>
