Adds intcomma's to the get response template to make the numbers more readable

--- a/odonto/templates/emails/response_summary.html
+++ b/odonto/templates/emails/response_summary.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <html>
 <body>
   <h1>{{ title }}</h1>
@@ -7,7 +8,10 @@
     {% for field, value in section.items %}
     <tr>
       <td {% if value.warning %}style="color: red"{% endif %} align="left">{{ field }}</td>
-      <td {% if value.warning %}style="color: red"{% endif %} align="right">{{ value }}</td>
+      <td {% if value.warning %}style="color: red"{% endif %} align="right">
+        {# if a value is a date, don't int comma it #}
+        {% if value.day %}{{ value }}{% else %}{{ value|intcomma }}{% endif %}
+      </td>
     </tr>
     {% endfor %}
   </table>
