Changes the password on the login screen from reset password to forgotten your password

--- a/odontotheme/templates/registration/login.html
+++ b/odontotheme/templates/registration/login.html
@@ -51,7 +51,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-12 text-center">
-          <a href="{% url 'password_reset' %}">Reset password</a>
+          <a href="{% url 'password_reset' %}">Forgotten your password</a>
         </div>
       </div>
       <input type="hidden" name="next" value="{{ next }}" />
