Make the best prevention label look nicer

--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -14,8 +14,8 @@
   <div class="col-md-3">
     {% btn_checkbox field="Fp17ClinicalDataSet.scale_and_polish" %}
   </div>
-  <div class="col-md-3 col-md-offset-1">
-    {% btn_checkbox field="Fp17ClinicalDataSet.best_practice_prevention" unit="number" style="vertical" %}
+  <div class="col-md-7 col-md-offset-1">
+    {% btn_checkbox field="Fp17ClinicalDataSet.best_practice_prevention" field_size=11 unit="number" style="vertical" %}
   </div>
 </div>
 
