--- a/odontotheme/static/css/odonto.css
+++ b/odontotheme/static/css/odonto.css
@@ -185,7 +185,203 @@ label {
   float: right;
 }
 
+.odonto-checkbox label.col-md-1 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-2 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-3 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-4 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-5 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-6 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-7 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-8 {
+  padding-left: 0px;
+}
+
 .odonto-checkbox label.col-md-9 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-10 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-11 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-12 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-13 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-14 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-15 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-16 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-17 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-18 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-19 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-20 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-21 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-22 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-23 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-24 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-25 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-26 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-27 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-28 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-29 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-30 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-31 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-32 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-33 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-34 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-35 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-36 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-37 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-38 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-39 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-40 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-41 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-42 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-43 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-44 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-45 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-46 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-47 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-48 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-49 {
+  padding-left: 0px;
+}
+
+.odonto-checkbox label.col-md-50 {
   padding-left: 0px;
 }
 
