Adds in the aerosol generating procedure to fp17 and fp17o

--- a/odonto/templates/forms/fp17_clinical_data_set_form.html
+++ b/odonto/templates/forms/fp17_clinical_data_set_form.html
@@ -18,7 +18,6 @@
     {% btn_checkbox field="Fp17ClinicalDataSet.best_practice_prevention" unit="number" style="vertical" %}
   </div>
 </div>
-
 <div class="row content-offset-20">
   <div class="col-md-1">
     {% teeth field="Fp17ClinicalDataSet.fissure_sealants" %}
@@ -57,7 +56,7 @@
     {% number field="Fp17ClinicalDataSet.antibiotic_items_prescribed" min="0" maxlength="2" %}
   </div>
   <div class="col-md-1 col-md-offset-1">
-
+    {% number field="Fp17ClinicalDataSet.aerosol_generating_procedures" min="0" maxlength="2" %}
   </div>
 </div>
 
