--- a/odonto/templates/forms/orthodontic_data_set_form.html
+++ b/odonto/templates/forms/orthodontic_data_set_form.html
@@ -7,7 +7,10 @@
 </div>
 <div class="row content-offset-20">
   <div class="col-md-3">
-    {% input field="OrthodonticDataSet.radiograph" style="vertical" %}
+    {% number field="OrthodonticDataSet.radiograph" %}
+  </div>
+  <div class="col-md-3 col-md-offset-1">
+    {% number field="OrthodonticDataSet.aerosol_generating_procedures" %}
   </div>
 </div>
 <div class="row content-offset-20">
