--- a/odonto/templates/records/fp17_clinical_data_set.html
+++ b/odonto/templates/records/fp17_clinical_data_set.html
@@ -148,6 +148,14 @@
       </tr>
       <tr>
         <td>
+          Aerosol generating procedures
+        </td>
+        <td>
+          [[ item.aerosol_generating_procedures ]]
+        </td>
+      </tr>
+      <tr>
+        <td>
           Other treatment
         </td>
         <td>
