--- a/odonto/templates/records/orthodontic_data_set.html
+++ b/odonto/templates/records/orthodontic_data_set.html
@@ -4,6 +4,7 @@
     <table class="table table-striped">
       {% table_row_field_display "OrthodonticDataSet.treatment_type" %}
       {% table_row_field_display "OrthodonticDataSet.radiograph" %}
+      {% table_row_field_display "OrthodonticDataSet.aerosol_generating_procedures" %}
       {% table_row_field_display "OrthodonticDataSet.removable_upper_appliance" %}
       {% table_row_field_display "OrthodonticDataSet.removable_lower_appliance" %}
       {% table_row_field_display "OrthodonticDataSet.fixed_upper_appliance" %}
