--- a/odonto/templates/pathway/templates/pathway_base.html
+++ b/odonto/templates/pathway/templates/pathway_base.html
@@ -25,7 +25,7 @@
       <div class="pathway-save-button content-offset-below-150">
           <a
           class="btn btn-lg btn-primary btn-save"
-          ng-click="(!pathway.errors && form.$valid) && pathway.finish(editing)"
+          ng-click="!form.$setSubmitted() && (!pathway.errors && form.$valid) && pathway.finish(editing)"
           ng-disabled="form.$submitted && (!form.$valid || pathway.errors)"
         >
           [[ pathway.finish_button_text ]]
