Adds in the case mix to the pathwa, also adds in a way of putting help text on a pathway step

--- a/odonto/templates/pathway/steps/step_base_template.html
+++ b/odonto/templates/pathway/steps/step_base_template.html
@@ -4,6 +4,9 @@
   <div class="row">
     <h2>
       {{ step.get_display_name }}
+      {% if step.other_args.help_template %}
+      {% include step.other_args.help_template %}
+      {% endif %}
     </h2>
   </div>
   {% endblock %}
