--- a/odonto/templates/view_fp17.html
+++ b/odonto/templates/view_fp17.html
@@ -14,7 +14,7 @@
       {% subrecord_row models.Fp17OtherDentalServices %}
       {% subrecord_row models.Fp17TreatmentCategory %}
       {% subrecord_row models.Fp17Recall %}
-
+      {% subrecord_row models.CaseMix %}
 {% endwith %}
   </div>
 {% endblock %}
