--- a/odonto/templates/partials/fp17_o_summary.html
+++ b/odonto/templates/partials/fp17_o_summary.html
@@ -7,6 +7,7 @@
 {% subrecord_row models.ExtractionChart pathway=pathway %}
 {% subrecord_row models.OrthodonticAssessment pathway=pathway %}
 {% subrecord_row models.OrthodonticTreatment pathway=pathway %}
+{% subrecord_row models.CaseMix pathway=pathway %}
 
 
 
