--- a/odonto/templates/partials/fp17_summary.html
+++ b/odonto/templates/partials/fp17_summary.html
@@ -8,4 +8,5 @@
 {% subrecord_row models.Fp17OtherDentalServices pathway=pathway %}
 {% subrecord_row models.Fp17TreatmentCategory pathway=pathway %}
 {% subrecord_row models.Fp17Recall pathway=pathway %}
+{% subrecord_row models.CaseMix pathway=pathway %}
 
