--- a/odonto/templates/view_fp17o.html
+++ b/odonto/templates/view_fp17o.html
@@ -13,6 +13,7 @@
       {% subrecord_row models.OrthodonticDataSet %}
       {% subrecord_row models.OrthodonticAssessment %}
       {% subrecord_row models.OrthodonticTreatment %}
+      {% subrecord_row models.CaseMix %}
 {% endwith %}
   </div>
 {% endblock %}
