Adds in a link in the stats page to view a csv

--- a/odonto/templates/stats.html
+++ b/odonto/templates/stats.html
@@ -110,9 +110,8 @@
   <div id="monthly-claims-graph">
   </div>
   {# End monthly claims graph #}
-
-
-
+  <h2>Case Mix<h2>
+  <a class="btn btn-primary btn btn-lg" target="_blank" href="{% url 'case-mix-csv' %}">Download Case Mix CSV</a>
 </div>
 
 <script>
