Stop large buttons font weight changing on hover

--- a/odontotheme/static/css/odonto.scss
+++ b/odontotheme/static/css/odonto.scss
@@ -268,7 +268,7 @@ h5{
     font-size: 18px;
     height: 48px;
 }
-.btn-lg {
+.btn-lg, .btn-lg:hover{
     padding: 6px 40px;
     font-size: 18px;
     font-weight: bold;
